Updated README.md, ammend JS function to debug layout issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,15 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 /* generic styles */
 
 .shadow {
-    box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
+    -webkit-box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
+            box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
 }
 
 /* colors */
@@ -90,7 +98,8 @@
     width: 100%;
     height: auto;
     display: block;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     padding: 10px
 }
 
@@ -98,7 +107,9 @@
     background-color: #fff;
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
-    align-self: center;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
 }
 
 /* following media query to reduce the homepage text box on larger screens */
@@ -142,6 +153,8 @@ padding: 30px 10px;
 
 .card-body{
     width: auto;
+    height: -webkit-fit-content;
+    height: -moz-fit-content;
     height: fit-content;
     overflow: hidden;
 }
@@ -165,7 +178,8 @@ padding: 30px 10px;
     width: 300px;
     height: 200px;
     display: block;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     padding: 10px
 }
 
@@ -175,7 +189,8 @@ padding: 30px 10px;
     width: 100%;
     height: auto;
     display: block;
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
     padding: 10px
 }
 
@@ -217,18 +232,16 @@ padding: 30px 10px;
 .modal-content{
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .modal-header {
     background-color: #ffc107;
 }
 
 .modal-title {
-    color: #fff;
-    
+    color: #fff;   
 }
 
 /* code altered from css tricks */
-    /* bottom: px; */
-    
 .modal-header-icon {
     color: #fff !important;
     font-size: 1.8rem;
@@ -246,6 +259,10 @@ padding: 30px 10px;
 
 .flash-body {
     margin: 10px auto;
+    
+    width: -webkit-fit-content;
+    
+    width: -moz-fit-content;
     
     width: fit-content;
     height: auto !important;
@@ -265,10 +282,12 @@ padding: 30px 10px;
 }
 
 .pagination {   
-    justify-content: right;
+    -webkit-box-pack: right;   
+        -ms-flex-pack: right;   
+            justify-content: right;
 }
 
-/* Profile page */
+
 
 
 
